...
				android:ellipsize="none"
				android:hyphenationFrequency="none"
				android:scrollHorizontally="false"
				android:textSize="20sp" />

			<Button
				android:id="@+id/details_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

		</LinearLayout>
	</ScrollView>
</LinearLayout>
...
