<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".presentation.customer.CartViewActivity">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/colorPrimary"
		android:theme="@style/ToolbarStyle"
		app:popupTheme="@style/AppTheme.PopupOverlay"
		app:titleTextColor="#fff" />

	<Button
		android:id="@+id/checkout"
		style="@style/Base.Widget.AppCompat.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"

		android:gravity="bottom|end"
		android:onClick="proceedCheckout"
		android:text="@string/checkout_button"
		android:textAlignment="center"
		android:textAllCaps="true"
		android:textSize="24sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<TextView
			android:id="@+id/emptyList"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center"
			android:gravity="center"
			android:text="@string/empty_cart_msg"
			android:textAlignment="center"
			android:textSize="24sp"
			android:visibility="gone" />

		<ListView
			android:id="@+id/cartList"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

	</LinearLayout>

</LinearLayout>
