...
			android:text="@string/live_orders"
			android:textAlignment="center"
			android:textSize="20sp"
			android:textStyle="bold" />

		<ListView
			android:id="@+id/ordersList"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

		<TextView
			android:id="@+id/live_orders"
			android:layout_width="match_parent"
...
