...
	<string name="last_name_hint">eg: Smith</string>
	<string name="address_hint">eg: 123 Main Street</string>
	<string name="email_hint">eg: johnsmith@gmail.com</string>
	<string name="phone_num_hint">eg: 2045555555</string>
	<string name="user_id_hint">eg: johnsmith2018</string>
	<string name="password_hint">Up to 20 characters</string>
	<string name="product_name">Product Name</string>
	<string name="product_price">Price</string>
	<string name="price_hint">eg: 19.99</string>
	<string name="sku">Stock Keeping Unit (SKU)</string>
	<string name="sku_hint">eg: 1234–001–F12–01</string>
	<string name="product_description">Description</string>
	<string name="product_quantity">Quantity</string>
...
	<string name="update_card">Update Card</string>
	<string name="remove_card">Remove Card</string>
	<string name="update_credit_card">Update Credit Card</string>
	<string name="_0">0</string>
	<string name="no_products">We are currently out of stock</string>
	<string name="create_employee">Create Employee</string>
	<string name="action_search">Search</string>
	<string name="no_products_found">No products found</string>
	<string name="search_hint">Search products</string>
	<string name="customer_main">I\'m a Customer</string>
	<string name="employee_main">I\'m an Employee</string>
	<string name="welcome_msg">Welcome to</string>
	<string name="skip_the_cart">SkipTheCart</string>
...
